--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
 
     <body>
-        <h1>Discover the hidden places in the world around you</h1>
+        <h1 class="header--main">Discover the hidden places in the world around you</h1>
         <p><a href="#">Download Excursion (Coming soon)</a></p>
     </body>
 </html>
