pictured added, stopped from mid, too ez

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 
     <body>
         <h1 class="header--main">Discover the hidden places in the world around you</h1>
-        <p><a href="#">Download Excursion (Coming soon)</a></p>
+        <p><a href="#" class="link--cta">Download Excursion (Coming soon)</a></p>
+        <video autoplay loop>
+            <source src="/resources/videos/excursion.mp4" type="video/mp4">
+        </video>
+        <h2 class="header--main">Your personal travel guide</h2>
+        <h4 class="header-sub-header">Excursion remembers places like you.and recommend new places around </h4>
+
+        <p><img src="/resources/images/camp.jpg" class="link--cta">Download Excursion (Coming soon)</img></p>
+        <p><img src="/resources/images/phone.png" class="link--cta">Download Excursion (Coming soon)</img></p>
     </body>
 </html>
